EandT/main/default/objects/Scheduled_Class__c/Scheduled_Class__c.object-meta.xml
<CustomObject>
    <description>Instances of when a Class is actually run - needs a date &amp; time as a minimum</description>
    <label>Scheduled Class</label>
    <nameField>
        <displayFormat>SC-{0000}</displayFormat>
        <label>Scheduled Class ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scheduled Classes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>