EandT/main/default/objects/Scheduled_Class__c/fields/Casual_Price__c.field-meta.xml
<CustomField>
    <fullName>Casual_Price__c</fullName>
    <formula>Class__r.Casual_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Casual Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>