EandT/main/default/objects/Scheduled_Class__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <label>Class</label>
    <referenceTo>Class__c</referenceTo>
    <relationshipLabel>Scheduled Classes</relationshipLabel>
    <relationshipName>Scheduled_Classes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>