EandT/main/default/objects/Scheduled_Class__c/fields/Class_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Class_Capacity__c</fullName>
    <inlineHelpText>The maximum number of students who can fit on this Scheduled Class. If you edit the parent class Max Students value, this filed value may be overwritten</inlineHelpText>
    <label>Class Capacity</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>