EandT/main/default/objects/Scheduled_Class__c/fields/Class_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Date__c</fullName>
    <label>Class Date</label>
    <type>DateTime</type>
</CustomField>