EandT/main/default/objects/Scheduled_Class__c/fields/Concession_Price__c.field-meta.xml
<CustomField>
    <fullName>Concession_Price__c</fullName>
    <formula>Class__r.Concession_Price__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Concession Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>