EandT/main/default/objects/Scheduled_Class__c/fields/External_Access_permisison__c.field-meta.xml
<CustomField>
    <fullName>External_Access_permisison__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Never show this field.  It is optional and shouldn't ever be populated.  This filter list setting should prevent it from being filled</description>
    <label>Dummy Account DO NOT POPULATE</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$User.Email</field>
            <operation>notEqual</operation>
            <valueField>$User.Email</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Scheduled Classes</relationshipLabel>
    <relationshipName>Scheduled_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>