EandT/main/default/objects/Scheduled_Class__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Select the invoice that this Scheduled Class is to be billed on</inlineHelpText>
    <label>Invoice</label>
    <referenceTo>Invoice__c</referenceTo>
    <relationshipLabel>Scheduled Classes</relationshipLabel>
    <relationshipName>Scheduled_Classes</relationshipName>
    <type>Lookup</type>
</CustomField>