EandT/main/default/objects/Scheduled_Class__c/fields/Invoice_Comments__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Comments__c</fullName>
    <description>A short-ish text field which will be shown on the invoice against the line that shows the class details</description>
    <inlineHelpText>Any text entered in this filed will be displayed agains this scheduled class on the invoice - if this is a class that if invoiced for</inlineHelpText>
    <label>Invoice Comments</label>
    <type>TextArea</type>
</CustomField>