EandT/main/default/objects/Scheduled_Class__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>The place where the Scheduled Class takes place.  Denormalised from parent Class record</description>
    <formula>Class__r.Location_Copy__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The place where the Scheduled Class takes place (looked up from parent Class record)</inlineHelpText>
    <label>Location</label>
    <type>Text</type>
</CustomField>