EandT/main/default/objects/Scheduled_Class__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <inlineHelpText>Make a note of anything particular about this class - such as a note for a mat class that you used therabands, balls etc.</inlineHelpText>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>