EandT/main/default/objects/Scheduled_Class__c/fields/Open_Places__c.field-meta.xml
<CustomField>
    <fullName>Open_Places__c</fullName>
    <description>The number of open places on this Scheduled Class</description>
    <formula>IF ( ISPICKVAL( Status__c , "Scheduled"),  Class_Capacity__c  -  Student_Count__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The number of open places on this Scheduled Class (calculated).  If the Scheduled Class is atn any other status, then open places=0</inlineHelpText>
    <label>Open Places</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>