EandT/main/default/objects/Scheduled_Class__c/fields/Registered_Customers__c.field-meta.xml
<CustomField>
    <fullName>Registered_Customers__c</fullName>
    <description>This field holds the concatenated ids of registered customers for this class</description>
    <label>Registered Customers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>