EandT/main/default/objects/Scheduled_Class__c/fields/Student_Count__c.field-meta.xml
<CustomField>
    <fullName>Student_Count__c</fullName>
    <inlineHelpText>Number of students (customers) registered on a Scheduled Class (Count of Class Attendances) where Class Attendance status 'Booked"</inlineHelpText>
    <label>Student Count</label>
    <summaryFilterItems>
        <field>Class_Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Booked</value>
    </summaryFilterItems>
    <summaryForeignKey>Class_Attendance__c.Scheduled_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>