EandT/main/default/objects/Scheduled_Class__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <formula>Class__r.Class_Type__r.Name</formula>
    <label>Type</label>
    <type>Text</type>
</CustomField>