EandT/main/default/objects/Scheduled_Class__c/fields/Waitlist_Length__c.field-meta.xml
<CustomField>
    <fullName>Waitlist_Length__c</fullName>
    <label>Waitlist Length</label>
    <summaryFilterItems>
        <field>Class_Attendance__c.Status__c</field>
        <operation>equals</operation>
        <value>Waitlisted</value>
    </summaryFilterItems>
    <summaryForeignKey>Class_Attendance__c.Scheduled_Class__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>