EandT/main/default/objects/Scheduled_Class__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Class_Date__c</columns>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>Student_Count__c</columns>
    <columns>Notes__c</columns>
    <columns>Invoice__c</columns>
    <columns>Invoice_Comments__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <sharedTo>
        <group>Internal_Users</group>
    </sharedTo>
</ListView>