EandT/main/default/objects/Scheduled_Class__c/listViews/Future_Classes_Internal_View.listView-meta.xml
<ListView>
    <fullName>Future_Classes_Internal_View</fullName>
    <columns>Class__c</columns>
    <columns>Status__c</columns>
    <columns>Class_Date__c</columns>
    <columns>Location__c</columns>
    <columns>Student_Count__c</columns>
    <columns>Open_Places__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Proposed,Scheduled</value>
    </filters>
    <filters>
        <field>Class_Date__c</field>
        <operation>greaterOrEqual</operation>
        <value>TODAY</value>
    </filters>
    <label>Future Classes (Internal view)</label>
    <sharedTo>
        <allInternalUsers/>
        <group>Internal_Users</group>
    </sharedTo>
</ListView>